@@ -1,0 +1,2 @@
+function _bashish_theme_elite { :;}
+BASHISH_THEME=elite
