@@ -1,5 +1,0 @@
-function fish_prompt
-        echo C:
-	echo $PWD|tr a-z A-Z|sed 's/\//\\/g'
-	echo '>'
-end
