@@ -1,0 +1,5 @@
+BASHISH_THEME=uberprompt
+_bashish_theme_uberprompt ()
+{
+	:
+}
